<resources>
    <string name="app_name">TodoList</string>
    <string name="categories">Categories</string>
    <string name="today_task">Today Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task_add">New Task Add</string>

    <string name="invalidurl">Invalid url</string>
    <string name="nointernet">Internet Connection is not available</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="add_category">Add Category</string>
    <string name="priority_flags">Priority Flags</string>
    <string name="select_time">Select Time</string>
    <string name="category">Category</string>

    //priority
    <string name="priority">Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="no_priority">No Priority</string>


    //Date filter
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last Week</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo_list">Todo List</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_6_digit_code_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with <font color='#F6265F'>4-digit code </font>to reset your password.</string>
    <string name="please_enter_the_6_digit_code_receive_by_email">Please enter the <font color='#F6265F'>4-digit code </font> receive by Email.</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit">Submit</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="done">Done</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>
    <string name="category_manager">Category Manager</string>
    <string name="inbox">Inbox</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="learning">Learning</string>
    <string name="fitness">Fitness</string>
    <string name="birthday">Birthday</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_data_found">No Data Found</string>
    <string name="successfully_added">Successfully added!</string>
    <string name="enter_title">Enter Title</string>

    //alram string
    <string name="arg_alarm_obj">AlarmObject</string>
    <string name="bundle_alarm_obj">BundleAlarmObject</string>
    <string name="alarm_title">My Alarm</string>
    <string name="enter_priority">Enter Priority</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_date">Enter Date</string>


</resources>