<?xml version="1.0" encoding="utf-8"?>
<layout>

    <!--    <data>-->

    <!--        <variable-->
    <!--            name="viewModel"-->
    <!--            type="com.opayl.viewmodel.ForgotViewModel" />-->
    <!--    </data>-->

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.Login">

        <include
            android:id="@+id/common_toolbar"
            layout="@layout/common_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llforgotpassContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/semi_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/regular_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_6_digit_code_to_reset_your_password"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/_11sdp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emaillayout"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black_2"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etemail"
                        style="@style/edittextlogintitle"
                        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress|textNoSuggestions" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    style="@style/mainbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/submit"
                    app:layout_constraintTop_toBottomOf="@+id/password_wrap" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
