<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp">



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imghighFlag"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/red_flag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvhighname"
            app:layout_constraintBottom_toBottomOf="@+id/tvhighname"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvhighname"
            style="@style/roboto_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/high_priority"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imghighFlag"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgmediumFlag"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/flag_yellow"
            app:layout_constraintTop_toTopOf="@+id/tvmediumname"
            app:layout_constraintBottom_toBottomOf="@+id/tvmediumname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imghighFlag" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvmediumname"
            style="@style/roboto_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/medium_priority"
            app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/imgmediumFlag"
            app:layout_constraintTop_toBottomOf="@+id/tvhighname" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imglowFlag"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/flag_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvlowPriority"
            app:layout_constraintBottom_toBottomOf="@+id/tvlowPriority"
            app:layout_constraintTop_toBottomOf="@+id/imgmediumFlag"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvlowPriority"
            style="@style/roboto_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/low_priority"
            app:layout_constraintStart_toEndOf="@+id/imglowFlag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvmediumname" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNoFlag"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/flag_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNoPriority"
            app:layout_constraintBottom_toBottomOf="@+id/tvNoPriority"
            app:layout_constraintTop_toBottomOf="@+id/imgmediumFlag"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoPriority"
            style="@style/roboto_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/no_priority"
            app:layout_constraintStart_toEndOf="@+id/imglowFlag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvlowPriority" />




</androidx.constraintlayout.widget.ConstraintLayout>