<?xml version="1.0" encoding="utf-8"?>
<layout>

<!--    <data>-->

<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.opayl.viewmodel.OtpViewModel" />-->
<!--    </data>-->

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.Login">


        <include layout="@layout/common_layout"
            android:id="@+id/common_toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llotpcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvtitle"
                    style="@style/semi_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="Enter your Code"
                    android:textAlignment="center"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/_22sdp"
                    app:layout_constraintTop_toBottomOf="@+id/view" />


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/regular_font"
                    android:id="@+id/tvcodehint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:text="@string/please_enter_the_6_digit_code_receive_by_email"
                    android:textColor="@color/black_2"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvtitle" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/codelayout"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/view1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                     app:errorEnabled="true"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    android:textColorHint="@color/black_2"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp"
                    >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etcode"
                            style="@style/edittextlogintitle"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="@string/enter_code"
                            android:inputType="number"
                            android:maxLength="4"
                            />



                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvreset"
                    style="@style/semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/resend_code"
                    android:layout_gravity="end"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/codelayout"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    style="@style/mainbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/teal_200"
                     android:text="@string/submit"
                    app:layout_constraintTop_toBottomOf="@+id/tvreset" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
