<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_25sdp"
            android:background="@drawable/rectangle_shape">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topcoantiner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/btnconatiner"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/cancel_btn"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvcategoryfiler"
                    style="@style/semi_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCateogryfilter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:scrollbars="vertical"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tvcategoryfiler"
                    tools:listitem="@layout/item_category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPriorityfiler"
                    style="@style/semi_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/priority"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvCateogryfilter" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPriorityfilter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriorityfiler"
                    tools:listitem="@layout/item_priority" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvdatefilter"
                    style="@style/semi_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/date"
                    android:visibility="gone"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvPriorityfilter" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDateFilter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvdatefilter"
                    tools:listitem="@layout/item_priority" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnconatiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/teal_200"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topcoantiner">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/newtask"
                    style="@style/semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/search"

                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>