<?xml version="1.0" encoding="utf-8"?>
<layout>

    <!--    <data>-->

    <!--        <variable-->
    <!--            name="viewModel"-->
    <!--            type="com.opayl.viewmodel.SignupViewModel" />-->
    <!--    </data>-->

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.Login">
        <include layout="@layout/common_layout"
            android:id="@+id/common_toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="@dimen/_3sdp"
            android:scrollbarThumbVertical="@color/red_200"
            android:scrollbars="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llsignupcontainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvtitle"
                    style="@style/bold_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="SignUp"
                    android:textAlignment="center"
                    android:textColor="@color/black_2"
                    android:textSize="@dimen/_30sdp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/namelayout"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textColorHint="@color/black_2"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etusername"
                        style="@style/edittextlogintitle"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="Full Name" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emaillayout"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black_2"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etemail"
                        style="@style/edittextlogintitle"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/enter_email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordlayout"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black_2"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp"
                    app:passwordToggleEnabled="true">
                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etpassword"
                        style="@style/edittextlogintitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="@dimen/_8sdp"
                        android:gravity="start"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmpasswordlayout"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black_2"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etconfirmpassword"
                        style="@style/edittextlogintitle"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    style="@style/mainbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/teal_200"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/signup"
                    app:layout_constraintTop_toBottomOf="@+id/password_wrap" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
